--- a/templates/pages/oauth2_change_details.html.twig
+++ b/templates/pages/oauth2_change_details.html.twig
@@ -15,7 +15,7 @@
 {% block body_matter %}
 
 <div class="form-alerts" id="alerts-page"></div>
-  <form action="{{site.uri.public}}/authorize" method="get">
+  <form action="{{site.uri.public}}/oauth" method="get">
 		<div class="col-md-9  col-md-offset-1">
 		<table class="table table-striped">
           <tbody>
