--- a/templates/pages/oauth2_list_apps.html.twig
+++ b/templates/pages/oauth2_list_apps.html.twig
@@ -1,4 +1,4 @@
-{% extends "layouts/dashboard.html.twig" %}
+{% extends "pages/abstract/dashboard.html.twig" %}
 
 {% block page_title %}Your Apps{% endblock %}
 {% block page_description %}{% endblock %}
